# fms_iterable.old

./: .fms_function.h.swp  .fms_iterable.cpp.swp  .fms_iterable.h.swp  .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md  compile_commands.json  fms_function.h  fms_iterable  fms_iterable.cpp  fms_iterable.h  fms_iterable.sln  fms_iterable.srctrldb  fms_iterable.srctrlprj  fms_iterable.t.cpp  fms_iterable.vcxproj  fms_iterable.vcxproj.filters  fms_iterable_copy.h  fms_numeric.h  fms_time.h  fms_tuple.h  scratch.txt
.github/workflows/: iterable.yml
scratch/: fms_iterable_copy.h  fms_iterable_iota.h  fms_numeric.h  fms_tuple.h
